--- a/GitHubNguyenThanhTung/HocGit.html
+++ b/GitHubNguyenThanhTung/HocGit.html
@@ -6,7 +6,8 @@
 	<title>Document</title>
 </head>
 <body>
-			<h1>	Lê Toàn Thắng - 1911065400</h1> 
+			<h1>	Lê Toàn Thắng - 1911065400</h1>
+			<h1>    Võ Hoàng Thiên - 1911062587</h1>
 			<!-- may ong code ten va commit vao day -->
 </body>
 </html>
