--- a/GitHubNguyenThanhTung/gioithieunhom.html
+++ b/GitHubNguyenThanhTung/gioithieunhom.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Le Toan Thang -1911065400</h1><h1>Vo Hoang Thien-1911062587</h1>
+    <h1>Le Toan Thang -1911065400</h1>
+    <h1>Vo Hoang Thien-1911062587</h1>
 </body>
 </html>
