--- a/GitHubNguyenThanhTung/gioithieunhom.html
+++ b/GitHubNguyenThanhTung/gioithieunhom.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Le Toan Thang -1911065400</h1>
     <h1>Vo Hoang Thien-1911062587</h1>
+    <h1>Tran Khac Thien-1911062261</h1>
 </body>
 </html>
