--- a/GitHubNguyenThanhTung/gioithieunhom.html
+++ b/GitHubNguyenThanhTung/gioithieunhom.html
@@ -10,5 +10,6 @@
     <h1>Le Toan Thang -1911065400</h1>
     <h1>Vo Hoang Thien-1911062587</h1>
     <h1>Tran Khac Thien-1911062261</h1>
+    <h1>Ngo Minh Thang-1911061869</h1>
 </body>
 </html>
